2004-09-26  Peter Moulder  <pmoulder@mail.csse.monash.edu.au>

	* src/sp-gradient-test.cpp: New unit test file.  I believe this is the
	  first test that tests an SPObject.
	* src/Makefile_insert, src/Makefile.am: Invoke the new test.

2004-09-24  MenTaLguY <mental@rydia.net>

	* src/selection-chemistry.cpp:
	
	  "select all" and "clear" now operate on the current layer rather than on
	  the document root

	* src/verbs.cpp, src/shortcuts.cpp, layer-fns.cpp, src/sp-item.cpp:
	
	  keyboard shortcuts and fixes for layer verbs

2004-09-23  MenTaLguY <mental@rydia.net>

	* src/message-stack.h, src/message-stack.cpp:

	  return id of flashed messages so they are cancellable

	* src/message-context.h, src/message-context.cpp:

	  message context flashes now supercede one another, as regular
	  messages do (they do not supercede regular messages though)

	* src/interface.cpp, src/layer-fns.cpp, src/layer-fns.h, src/verbs.cpp:

	  initial stab at layers menu; not everything works the way it should
	  quite yet

	* src/message-context.h, src/message-context.cpp: 

	  added flash methods to Inkscape::MessageContext

	* src/gc-core.h, src/display/nr-arena-glyphs.cpp, src/display/nr-arena-group.cpp,
	  src/display/nr-arena-item.cpp, src/display/nr-arena-item.h,
	  src/display/nr-arena-shape.cpp, src/libnr/nr-object.cpp, src/libnr/nr-object.h,

	  eliminate more sources of leaks; managed objects shouldn't use refcounts
	  among themselves

	* src/xml/repr.cpp: don't nuke log pointer

2004-09-21  MenTaLguY <mental@rydia.net>

	* src/gc-finalized.h: fix for stupid bug preventing finalizable objects
	  from being collected

	* src/Makefile_insert, src/gc.cpp, src/gc-core.h:
	  move Inkscape::GC::init out-of-line, and funnel GC warnings through
	  glib

2004-09-21  Peter Moulder  <pmoulder@river>

	* src/sp-marker.h, src/sp-marker.cpp (sp_marker_show_instance):
	  Change to using NR::Matrix instead of NRMatrix.  Update caller.

	* src/sp-gradient.cpp (sp_gradient_get_g2d_matrix,