@@ -274,11 +274,6 @@ bool Matrix::is_translation(const Coord eps) const {
              fabs(_c[2]) < eps );
 }
 
-Matrix::operator NR::translate() const {
-	return NR::translate(_c[4], _c[5]);
-}
-
-
 bool Matrix::test_identity() const {
         return NR_MATRIX_DF_TEST_CLOSE (this, &NR_MATRIX_IDENTITY, NR_EPSILON);
 }
